--- a/iDryer_mcu/U1.cfg
+++ b/iDryer_mcu/U1.cfg
@@ -164,54 +164,54 @@ gcode:
     UPDATE_DELAYED_GCODE ID=LED_SERVICE DURATION=5
 
 
-[gcode_macro LED_BLINK]
-gcode:
-    {% set colors = [
-        {'R': 1.0, 'G': 0.0, 'B': 0.0},  
-        {'R': 0.0, 'G': 1.0, 'B': 0.0},  
-        {'R': 0.0, 'G': 0.0, 'B': 1.0}, 
-        {'R': 1.0, 'G': 1.0, 'B': 0.0}   
-    ] %}
+# [gcode_macro LED_BLINK]
+# gcode:
+#     {% set colors = [
+#         {'R': 1.0, 'G': 0.0, 'B': 0.0},  
+#         {'R': 0.0, 'G': 1.0, 'B': 0.0},  
+#         {'R': 0.0, 'G': 0.0, 'B': 1.0}, 
+#         {'R': 1.0, 'G': 1.0, 'B': 0.0}   
+#     ] %}
     
-    {% for i in range(blink_count) %}
-        {% for j in range(4) %}
-            {% set color = colors[j] %}
-            SET_LED LED=sprd RED={color.R} GREEN={color.G} BLUE={color.B} WHITE=0 INDEX={j+1} TRANSMIT=1 SYNC=0
-            G4 P100; 
-            SET_LED LED=sprd RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX={j+1} TRANSMIT=1 SYNC=0
-            G4 P100 
-        {% endfor %}
-    {% endfor %}
+#     {% for i in range(blink_count) %}
+#         {% for j in range(4) %}
+#             {% set color = colors[j] %}
+#             SET_LED LED=sprd RED={color.R} GREEN={color.G} BLUE={color.B} WHITE=0 INDEX={j+1} TRANSMIT=1 SYNC=0
+#             G4 P100; 
+#             SET_LED LED=sprd RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX={j+1} TRANSMIT=1 SYNC=0
+#             G4 P100 
+#         {% endfor %}
+#     {% endfor %}
 
 
-[gcode_macro LED_RAINBOW]
-gcode:
-    {% set num_leds = 4 %} 
-    {% set steps = 500 %} 
-    {% set delay = 50 %}  
+# [gcode_macro LED_RAINBOW]
+# gcode:
+#     {% set num_leds = 4 %} 
+#     {% set steps = 500 %} 
+#     {% set delay = 50 %}  
 
-    {% for step in range(steps) %}
-        {% for i in range(num_leds) %}
-            {% set position = (step * 360 / steps + i * (360 / num_leds)) % 360 %}
+#     {% for step in range(steps) %}
+#         {% for i in range(num_leds) %}
+#             {% set position = (step * 360 / steps + i * (360 / num_leds)) % 360 %}
 
-            {% if position < 120 %}
-                {% set red = 1.0 - position / 120.0 %}
-                {% set green = position / 120.0 %}
-                {% set blue = 0.0 %}
-            {% elif position < 240 %}
-                {% set red = 0.0 %}
-                {% set green = 1.0 - (position - 120) / 120.0 %}
-                {% set blue = (position - 120) / 120.0 %}
-            {% else %}
-                {% set red = (position - 240) / 120.0 %}
-                {% set green = 0.0 %}
-                {% set blue = 1.0 - (position - 240) / 120.0 %}
-            {% endif %}
+#             {% if position < 120 %}
+#                 {% set red = 1.0 - position / 120.0 %}
+#                 {% set green = position / 120.0 %}
+#                 {% set blue = 0.0 %}
+#             {% elif position < 240 %}
+#                 {% set red = 0.0 %}
+#                 {% set green = 1.0 - (position - 120) / 120.0 %}
+#                 {% set blue = (position - 120) / 120.0 %}
+#             {% else %}
+#                 {% set red = (position - 240) / 120.0 %}
+#                 {% set green = 0.0 %}
+#                 {% set blue = 1.0 - (position - 240) / 120.0 %}
+#             {% endif %}
 
-            SET_LED LED=sprd RED={red|float} GREEN={green|float} BLUE={blue|float} WHITE=0 INDEX={i+1} TRANSMIT=1 SYNC=0
-        {% endfor %}
-        G4 P{delay} ;
-    {% endfor %}
+#             SET_LED LED=sprd RED={red|float} GREEN={green|float} BLUE={blue|float} WHITE=0 INDEX={i+1} TRANSMIT=1 SYNC=0
+#         {% endfor %}
+#         G4 P{delay} ;
+#     {% endfor %}
 
 
 #========================================================
